Build an HVM AMI using Amazon Linux and upgrade to Solr 4.8.1